--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -57,7 +57,7 @@
         - name: Overzicht
           href: encoding-concept.md
           displayName: 'encoding, presets, jobs, adaptive, bitrate'
-        - name: API voor transformaties en taken
+        - name: Transformaties en taken
           href: transforms-jobs-concept.md
           displayName: 'preset, schema'
         - name: Standaard coderingsindelingen
@@ -74,7 +74,7 @@
         - name: Overzicht
           href: analyzing-video-audio-files-concept.md
           displayName: 'analyzing, presets, jobs'
-        - name: API voor transformaties en taken
+        - name: Transformaties en taken
           href: transforms-jobs-concept.md
         - name: Foutcodes in taak
           href: job-error-codes.md
@@ -85,15 +85,15 @@
           href: dynamic-packaging-overview.md
         - name: Dynamische manifesten
           href: filters-dynamic-manifest-overview.md
-        - name: API voor filters
+        - name: Filters
           href: filters-concept.md
-        - name: API voor streaming-eindpunten
+        - name: Streaming-eindpunten
           displayName: 'origin, packager, cdn'
           href: streaming-endpoint-concept.md
-        - name: API voor streaming-locators
+        - name: Streaming-locators
           displayName: URLs
           href: streaming-locators-concept.md
-        - name: API voor streaming-beleid
+        - name: Beleid voor streaming
           href: streaming-policy-concept.md
         - name: Foutcodes voor streaming-eindpunten
           href: streaming-endpoint-error-codes.md
@@ -112,15 +112,15 @@
               href: widevine-license-template-overview.md
             - name: FairPlay-licentievereisten
               href: fairplay-license-overview.md
-        - name: API voor streaming-beleid
+        - name: Beleid voor streaming
           href: streaming-policy-concept.md
-        - name: API voor beleid voor inhoudssleutels
+        - name: Beleid voor inhoudssleutels
           href: content-key-policy-concept.md
     - name: Live streamen
       items:
         - name: Overzicht
           href: live-streaming-overview.md
-        - name: API voor livegebeurtenissen en live-uitvoer
+        - name: Live gebeurtenissen en live uitvoer
           href: live-events-outputs-concept.md
         - name: Aanbevolen live-encoders
           href: recommended-on-premises-live-encoders.md
