--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -29,6 +29,8 @@
           href: quickstarts/csharp.md
         - name: Python
           href: quickstarts/python-sdk.md
+        - name: Ruby
+          href: quickstarts/ruby-sdk.md
 - name: Zelfstudies
   items:
     - name: Power BI integreren om klantenfeedback te analyseren
