--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -138,6 +138,18 @@
         - name: Gegevenssets toevoegen & registreren
           displayName: 'data, dataset'
           href: how-to-create-register-datasets.md
+        - name: Gegevens verkennen
+          displayName: 'data, eda, exploratory, analysis, etl, dataset, summary statistics, profile, explore, data preparation, dataprep'
+          href: how-to-explore-prepare-data.md
+        - name: Versie & gegevensdefinities beheren
+          displayName: 'data, etl, dataset, data preparation, dataprep, version'
+          href: how-to-manage-dataset-definitions.md
+        - name: Momentopname van gegevens maken
+          displayName: 'snapshots, profile, summary statistics, data copy'
+          href: how-to-create-dataset-snapshots.md
+        - name: Gegevens uit gegevensarchief ophalen
+          displayName: blob get fileshare access storage
+          href: how-to-access-data.md
         - name: Voorbereiden met azureml.dataprep
           items:
             - name: Gegevens laden
@@ -149,18 +161,6 @@
             - name: Gegevens schrijven
               displayName: 'data, etl, data prep, dataprep'
               href: how-to-write-data.md
-        - name: Voorbereiden met gegevenssets (preview)
-          displayName: 'data, etl, dataset, summary statistics, profile, explore, data preparation, dataprep'
-          href: how-to-explore-prepare-data.md
-        - name: Versie & gegevensdefinities beheren
-          displayName: 'data, etl, dataset, data preparation, dataprep, version'
-          href: how-to-manage-dataset-definitions.md
-        - name: Momentopname van gegevens maken
-          displayName: 'snapshots, profile, summary statistics, data copy'
-          href: how-to-create-dataset-snapshots.md
-        - name: Gegevens uit gegevensarchief ophalen
-          displayName: blob get fileshare access storage
-          href: how-to-access-data.md
     - name: Modellen trainen
       items:
         - name: Een trainingsomgeving instellen
