commit translated contents

--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -71,7 +71,7 @@
     - name: Python-voorbeelden
       href: sql-api-python-samples.md
     - name: PowerShell
-      href: powershell-samples.md
+      href: powershell-samples-sql.md
     - name: Azure-CLI
       href: cli-samples.md
     - name: Azure Resource Manager
@@ -277,6 +277,8 @@
                   href: cassandra-spark-table-copy-ops.md
             - name: Beheren met behulp van Resource Manager-sjablonen
               href: manage-cassandra-with-resource-manager.md
+            - name: Beheren met PowerShell
+              href: powershell-samples-cassandra.md
     - name: MongoDB-API
       items:
         - name: Inleiding
@@ -356,6 +358,8 @@
               displayName: custom commands
             - name: Beheren met behulp van Resource Manager-sjablonen
               href: manage-mongodb-with-resource-manager.md
+            - name: Beheren met PowerShell
+              href: powershell-samples-mongodb.md
     - name: Gremlin-API
       displayName: 'graph, graph database'
       items:
@@ -394,6 +398,8 @@
               maintainContext: true
             - name: Beheren met behulp van Resource Manager-sjablonen
               href: manage-gremlin-with-resource-manager.md
+            - name: Beheren met PowerShell
+              href: powershell-samples-gremlin.md
     - name: Tabel-API
       items:
         - name: Inleiding
@@ -446,6 +452,8 @@
               href: table-storage-design-guide.md
             - name: Beheren met behulp van Resource Manager-sjablonen
               href: manage-table-with-resource-manager.md
+            - name: Beheren met PowerShell
+              href: powershell-samples-table.md
         - name: Naslaginformatie
           items:
             - name: .NET
