--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -450,7 +450,7 @@
           topicHref: /azure/hdinsight/domain-joined/apache-domain-joined-introduction
         - name: ML Services
           tocHref: /azure/hdinsight/r-server
-          topicHref: /azure/hdinsight/r-server-overview
+          topicHref: /azure/hdinsight/r-server/r-server-overview
         - name: Spark
           tocHref: /azure/hdinsight/spark
           topicHref: /azure/hdinsight/spark/apache-spark-overview
@@ -485,7 +485,7 @@
           items:
             - name: Naslaginformatie over algoritmen en modules
               tocHref: /azure/machine-learning/algorithm-module-reference
-              topicHref: /azure/machine-learning/algorithm-module-reference/module-reference.md
+              topicHref: /azure/machine-learning/algorithm-module-reference/module-reference
         - name: Studio
           tocHref: /azure/machine-learning/studio
           topicHref: /azure/machine-learning/studio/
@@ -614,7 +614,7 @@
     - name: SQL Server Stretch Database
       tocHref: /azure/sql-server-stretch-database/
       topicHref: /azure/sql-server-stretch-database/
-    - name: Opslag
+    - name: Storage
       tocHref: /azure/storage/
       topicHref: /azure/storage/
       items:
