--- a/articles/batch/index.yml
+++ b/articles/batch/index.yml
@@ -57,6 +57,17 @@ sections:
         className: spaced noBullet
         items:
           - html: <a href="cli-samples">Azure-CLI</a>
+  - title: Gratis Pluralsight-videotraining
+    items:
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Aan de slag met Microsoft Azure Batch
+            href: 'https://app.pluralsight.com/library/courses/microsoft-azure-batch-getting-started/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/microsoft-azure-batch-getting-started/table-of-contents'
   - title: Naslaginformatie
     items:
       - type: list
