--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -487,3 +487,5 @@
       href: ./partner-center-portal/update-existing-offer.md
     - name: Ondersteuningsopties
       href: ./partner-center-portal/support.md
+    - name: Analytische gegevens voor Partnercentrum
+      href: ./partner-center-portal/analytics.md
