--- a/articles/active-directory-domain-services/TOC.yml
+++ b/articles/active-directory-domain-services/TOC.yml
@@ -1,147 +1,133 @@
 - name: Documentatie voor Azure AD Domain Services
   href: index.yml
 - name: Overzicht
+  expanded: true
   items:
     - name: Wat is Azure AD Domain Services?
-      href: active-directory-ds-overview.md
-    - name: Veelgestelde vragen
-      href: active-directory-ds-faqs.md
-    - name: Is dit geschikt voor u?
-      items:
-        - name: Vergelijken met Windows Server AD
-          href: active-directory-ds-comparison.md
-        - name: Vergelijken met Azure AD Join
-          href: active-directory-ds-compare-with-azure-ad-join.md
-    - name: Wat is nieuw?
-      href: 'https://azure.microsoft.com/updates/?product=active-directory-ds'
+      href: overview.md
+    - name: Vergelijken met Windows Server AD
+      href: comparison.md
+    - name: Vergelijken met Azure AD Join
+      href: active-directory-ds-compare-with-azure-ad-join.md
     - name: Functies
       href: active-directory-ds-features.md
-    - name: Scenario's
-      href: active-directory-ds-scenarios.md
-    - name: Hoe synchronisatie werkt
-      href: active-directory-ds-synchronization.md
-    - name: Compatibele software van derden
-      href: active-directory-ds-compatible-software.md
-- name: Aan de slag
+- name: Voorbeelden
   items:
-    - name: 'Taak 1: de basisinstellingen configureren'
-      href: active-directory-ds-getting-started.md
-    - name: 'Taak 2: de netwerkinstellingen configureren'
-      href: active-directory-ds-getting-started-network.md
-    - name: 'Taak 3: de beheergroep configureren en Azure AD Domain Services inschakelen'
-      href: active-directory-ds-getting-started-admingroup.md
-    - name: 'Taak 4: de DNS-instellingen voor het virtuele netwerk bijwerken'
-      href: active-directory-ds-getting-started-dns.md
-    - name: 'Taak 5: wachtwoord-hashsynchronisatie inschakelen'
-      href: active-directory-ds-getting-started-password-sync.md
+    - name: Een Azure AD DS-exemplaar maken met behulp van Azure PowerShell
+      href: powershell-create-instance.md
+- name: Concepten
+  items:
+    - name: Hoe synchronisatie werkt
+      href: synchronization.md
 - name: Procedures
   items:
-    - name: De status van een beheerd domein controleren
-      href: active-directory-ds-check-health.md
-    - name: Azure AD Domain Services gebruiken in Azure CSP-abonnementen
-      href: active-directory-ds-csp.md
-    - name: Azure AD Domain Services inschakelen met behulp van PowerShell
-      href: active-directory-ds-enable-using-powershell.md
-    - name: Bereik voor synchronisatie van Azure AD naar een beheerd domein configureren
-      href: active-directory-ds-scoped-synchronization.md
-    - name: Uw beheerde domein beveiligen
-      href: active-directory-ds-secure-your-domain.md
-    - name: Een organisatie-eenheid maken in een beheerd domein
-      href: active-directory-ds-admin-guide-create-ou.md
-    - name: Een beheerd serviceaccount voor groepen maken in een beheerd domein
-      href: active-directory-ds-create-gmsa.md
-    - name: Groepsbeleid in een beheerd domein beheren
-      href: active-directory-ds-admin-guide-administer-group-policy.md
-    - name: Wachtwoordbeleid in een beheerd domein configureren
-      href: active-directory-ds-password-policy.md
-    - name: Een virtueel netwerk selecteren
-      href: active-directory-ds-networking.md
-    - name: Toepassingen implementeren
+    - name: Een Azure AD DS-exemplaar maken
+      items:
+        - name: 'Taak 1: de basisinstellingen configureren'
+          href: create-instance.md
+        - name: 'Taak 2: de netwerkinstellingen configureren'
+          href: active-directory-ds-getting-started-network.md
+        - name: 'Taak 3: de beheergroep configureren en Azure AD Domain Services inschakelen'
+          href: active-directory-ds-getting-started-admingroup.md
+        - name: 'Taak 4: de DNS-instellingen voor het virtuele netwerk bijwerken'
+          href: active-directory-ds-getting-started-dns.md
+        - name: 'Taak 5: wachtwoord-hashsynchronisatie inschakelen'
+          href: active-directory-ds-getting-started-password-sync.md
+    - name: Plannen voor Azure AD DS
+      items:
+        - name: Scenario's
+          href: scenarios.md
+        - name: Een virtueel netwerk selecteren
+          href: network-considerations.md
+    - name: Azure AD DS beheren
+      items:
+        - name: De status van een beheerd domein controleren
+          href: check-health.md
+        - name: Bereik voor synchronisatie van Azure AD naar een beheerd domein configureren
+          href: scoped-synchronization.md
+        - name: Uw beheerde domein beveiligen
+          href: secure-your-domain.md
+        - name: Een organisatie-eenheid maken in een beheerd domein
+          href: create-ou.md
+        - name: Een beheerd serviceaccount voor groepen maken in een beheerd domein
+          href: create-gmsa.md
+        - name: Groepsbeleid voor Azure AD Domain Services beheren
+          href: manage-group-policy.md
+        - name: Wachtwoordbeleid in een beheerd domein configureren
+          href: password-policy.md
+        - name: Een beheerd domein verwijderen
+          href: delete-aadds.md
+        - name: Een virtuele machine voor beheer van Azure AD DS maken
+          href: manage-domain.md
+        - name: DNS beheren voor Azure AD Domain Services
+          href: manage-dns.md
+        - name: E-mailmeldingen bijwerken
+          href: notifications.md
+        - name: Secure LDAP (LDAPS) in een Azure AD Domain Services-domein configureren
+          href: configure-ldaps.md
+          items:
+            - name: 'Taak 2: het certificaat voor Secure LDAP exporteren'
+              href: active-directory-ds-admin-guide-configure-secure-ldap-export-pfx.md
+            - name: 'Taak 3: Secure LDAP inschakelen voor het beheerde domein met de Azure-portal'
+              href: active-directory-ds-admin-guide-configure-secure-ldap-enable-ldaps.md
+            - name: 'Taak 4: DNS configureren voor toegang tot het beheerde domein vanaf het internet'
+              href: active-directory-ds-ldaps-configure-dns.md
+            - name: 'Taak 5: verbinding maken met het beheerde domein en de Secure LDAP-toegang vergrendelen'
+              href: active-directory-ds-ldaps-bind-lockdown.md
+    - name: Toepassingen implementeren naar Azure AD DS
       items:
         - name: Ondersteuning voor profielsynchronisatie voor SharePoint Server configureren
-          href: active-directory-ds-enable-sharepoint-profile-sync.md
+          href: deploy-sp-profile-sync.md
         - name: Kerberos-beperkte overdracht configureren
-          href: active-directory-ds-enable-kcd.md
+          href: deploy-kcd.md
         - name: Azure AD-toepassingsproxy implementeren
-          href: active-directory-ds-deploy-azure-app-proxy.md
-    - name: Een beheerd domein verwijderen
-      href: active-directory-ds-disable-aadds.md
-- name: Een beheerd domein koppelen
-  items:
-    - name: Windows Server-VM
-      href: active-directory-ds-admin-guide-join-windows-vm-portal.md
-    - name: Windows Server-VM op basis van sjabloon
-      href: active-directory-ds-join-windows-vm-template.md
-    - name: CentOS
-      href: active-directory-ds-join-centos-linux-vm.md
-    - name: CoreOS
-      href: active-directory-ds-join-coreos-linux-vm.md
-    - name: Red Hat Enterprise Linux
-      href: active-directory-ds-join-rhel-linux-vm.md
-    - name: Ubuntu Server
-      href: active-directory-ds-join-ubuntu-linux-vm.md
-- name: Een beheerd domein beheren
-  items:
-    - name: Een beheerd domein beheren
-      href: active-directory-ds-admin-guide-administer-domain.md
-    - name: DNS beheren in een beheerd domein
-      href: active-directory-ds-admin-guide-administer-dns.md
-    - name: E-mailmeldingen bijwerken
-      href: active-directory-ds-notifications.md
-- name: Secure LDAP configureren voor een beheerd domein
-  items:
-    - name: 'Taak 1: een certificaat voor Secure LDAP verkrijgen'
-      href: active-directory-ds-admin-guide-configure-secure-ldap.md
-    - name: 'Taak 2: het certificaat voor Secure LDAP exporteren'
-      href: active-directory-ds-admin-guide-configure-secure-ldap-export-pfx.md
-    - name: 'Taak 3: Secure LDAP inschakelen voor het beheerde domein met de Azure-portal'
-      href: active-directory-ds-admin-guide-configure-secure-ldap-enable-ldaps.md
-    - name: 'Taak 4: DNS configureren voor toegang tot het beheerde domein vanaf het internet'
-      href: active-directory-ds-ldaps-configure-dns.md
-    - name: 'Taak 5: verbinding maken met het beheerde domein en de Secure LDAP-toegang vergrendelen'
-      href: active-directory-ds-ldaps-bind-lockdown.md
-    - name: Problemen met Secure LDAP oplossen
-      href: active-directory-ds-ldaps-troubleshoot.md
-- name: Problemen oplossen
-  items:
-    - name: Handleiding voor het oplossen van problemen
-      href: active-directory-ds-troubleshooting.md
-    - name: Waarschuwingsproblemen oplossen
-      href: active-directory-ds-troubleshoot-alerts.md
+          href: deploy-azure-app-proxy.md
+    - name: Virtuele machines toevoegen aan Azure AD DS
       items:
-        - name: Problemen met NSG-configuratie oplossen
-          href: active-directory-ds-troubleshoot-nsg.md
-        - name: Ontbrekende service-principals herstellen
-          href: active-directory-ds-troubleshoot-service-principals.md
-        - name: Fouten met betrekking tot Secure LDAP
-          href: active-directory-ds-troubleshoot-ldaps.md
-    - name: Fouten met niet-overeenkomende tenants oplossen
-      href: active-directory-ds-mismatched-tenant-error.md
-    - name: Onderbroken domeinen
-      href: active-directory-ds-suspension.md
-- name: Naslaginformatie
-  items:
-    - name: Codevoorbeelden
-      href: 'https://azure.microsoft.com/resources/samples/?service=active-directory'
-- name: Verwant
-  items:
-    - name: Azure Active Directory
-      href: ../active-directory/fundamentals/active-directory-whatis.md
-    - name: Azure Active Directory B2C
-      href: ../active-directory-b2c/active-directory-b2c-overview.md
-    - name: Multi-Factor Authentication
-      href: ../active-directory/authentication/multi-factor-authentication.md
+        - name: Windows Server-VM
+          href: join-windows-vm.md
+        - name: Windows Server-VM op basis van sjabloon
+          href: join-windows-vm-template.md
+        - name: CentOS
+          href: join-centos-linux-vm.md
+        - name: CoreOS
+          href: join-coreos-linux-vm.md
+        - name: Red Hat Enterprise Linux
+          href: join-rhel-linux-vm.md
+        - name: Ubuntu Server
+          href: join-ubuntu-linux-vm.md
+    - name: Problemen met Azure AD DS oplossen
+      items:
+        - name: Handleiding voor het oplossen van problemen
+          href: troubleshoot.md
+        - name: Waarschuwingsproblemen oplossen
+          href: troubleshoot-alerts.md
+          items:
+            - name: Problemen met NSG-configuratie oplossen
+              href: alert-nsg.md
+            - name: Ontbrekende service-principals herstellen
+              href: alert-service-principal.md
+            - name: Fouten met betrekking tot Secure LDAP
+              href: alert-ldaps.md
+        - name: Fouten met niet-overeenkomende tenants oplossen
+          href: mismatched-tenant-error.md
+        - name: Onderbroken domeinen
+          href: suspension.md
+        - name: Problemen met Secure LDAP oplossen
+          href: tshoot-ldaps.md
 - name: Resources
   items:
-    - name: Azure AD-feedbackforum
-      href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
-    - name: Azure-roadmap
-      href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
-    - name: Contact opnemen
-      href: active-directory-ds-contact-us.md
-    - name: Prijzen
-      href: 'https://azure.microsoft.com/pricing/details/active-directory-ds/'
-    - name: Prijscalculator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Veelgestelde vragen
+      href: faqs.md
     - name: Service-updates
       href: 'https://azure.microsoft.com/updates/?product=active-directory-ds'
+    - name: Compatibele software van derden
+      href: compatible-software.md
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/active-directory-ds/'
+    - name: Azure AD-feedbackforum
+      href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
+    - name: Contact opnemen
+      href: contact-us.md
+    - name: Azure AD Domain Services gebruiken in Azure CSP-abonnementen
+      href: csp.md
