--- a/articles/networking/TOC.yml
+++ b/articles/networking/TOC.yml
@@ -40,8 +40,8 @@
               href: connectivty-interoperability-data-plane.md?toc=%2fazure%2fnetworking%2ftoc.json
     - name: Concepten
       items:
-        - name: Microsoft global WAN
-          href: azure-network.md
+        - name: Wereldwijd Microsoft-netwerk
+          href: microsoft-global-network.md
         - name: Virtuele netwerken
           href: ../virtual-network/virtual-networks-overview.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: Taakverdeling voor netwerken
