--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -121,10 +121,14 @@
           href: storage-sync-offline-data-transfer.md
         - name: Gegevens verplaatsen naar en uit Azure Storage
           href: ../common/storage-moving-data.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: AzCopy in Windows
-          href: ../common/storage-use-azcopy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: AzCopy in Linux
-          href: ../common/storage-use-azcopy-linux.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Gegevens verplaatsen met AzCopy
+          items:
+            - name: Aan de slag
+              href: ../common/storage-use-azcopy-v10.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: Gebruiken met Files
+              href: ../common/storage-use-azcopy-files.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 'Configureren, optimaliseren, problemen oplossen'
+              href: ../common/storage-use-azcopy-configure.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Ontwikkelen
       items:
         - name: Verbindingsreeksen configureren
