commit translated contents

--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -27,6 +27,8 @@
       href: 'https://azure.microsoft.com/support/legal/cognitive-services-compliance-and-privacy/'
     - name: Video's
       href: 'https://azure.microsoft.com/resources/videos/index/?services=cognitive-services'
+    - name: Blog
+      href: 'https://azure.microsoft.com/blog/topics/cognitive-services/'
     - name: Service-updates
       href: 'https://azure.microsoft.com/updates/?product=cognitive-services'
     - name: Productfeedback geven
